[package]
name = "onewire"
version = "0.5.0"
authors = ["Tibor Prokai <pro@sch.bme.hu>"]
repository = "https://github.com/tib888/onewire"
description = "1-wire implementation using for embedded_hal"
keywords = ["embedded", "onewire", "1wire", "stm32"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT"
edition = "2018"

[lib]

#[dependencies]
#cortex-m = "0.5.0"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.3"
